<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you</string>
    <string name="whip_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order">ORDER</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary_whipped_cream">Add whip cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>


    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just java order for: <xliff:g example="Amy" id="name">%s</xliff:g></string>

</resources>
