<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/simpleEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/name"
                android:inputType="textCapWords"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/toppings"
                android:id="@+id/top"
               style="@style/CustomText" />


            <CheckBox
                android:id="@+id/notify_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="24dp"
                android:textSize="20sp"
                android:text="@string/whip_cream"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quantity" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:layout_marginLeft="16dp"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:text="0"
                    style="@style/CustomText"

                     />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textSize="20sp" />
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
